fix: alignment of the media items

--- a/src/components/MediaWidget/LinkItemWidget.css
+++ b/src/components/MediaWidget/LinkItemWidget.css
@@ -1,10 +1,19 @@
 .memori-link-items--grid {
     display: grid;
     padding: 1rem;
-    direction: rtl;
     grid-auto-flow: dense;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+}
+
+/* Allineamento link per messaggi dell'utente */
+.memori-link-items--grid.memori-link-items--user {
+    direction: rtl;
+}
+
+/* Allineamento link per messaggi dell'agente */
+.memori-link-items--grid.memori-link-items--agent {
+    direction: ltr;
 }
 
 .memori-link-item--card {
